//! API Contract Tests
//!
//! Tests for gRPC and REST API contracts including:
//! - Request/response validation
//! - Error code mapping
//! - Authentication/authorization
//! - API versioning
//! - OpenAPI documentation

use chrono::NaiveDate;
use killer_financial_service::api::error::{ApiError, ErrorCode};
use killer_financial_service::api::middleware::auth::{AuthContext, AuthInterceptor};
use serde::{Deserialize, Serialize};
use std::collections::HashMap;

// =============================================================================
// gRPC Contract Tests
// =============================================================================

mod grpc_contract_tests {
    use super::*;

    const TEST_TENANT_ID: &str = "550e8400-e29b-41d4-a716-446655440000";
    const TEST_USER_ID: &str = "550e8400-e29b-41d4-a716-446655440001";

    #[test]
    fn test_create_journal_entry_request_validation() {
        // Test that request has all required fields
        let request = CreateJournalEntryApiRequest {
            company_code: "1000".to_string(),
            fiscal_year: 2024,
            posting_date: "2024-01-15".to_string(),
            document_date: "2024-01-15".to_string(),
            currency_code: "CNY".to_string(),
            header_text: Some("Test".to_string()),
            line_items: vec![
                LineItemRequest {
                    account_code: "1001".to_string(),
                    amount: 1000.0,
                    debit_credit: "D".to_string(),
                    cost_center: Some("CC001".to_string()),
                },
                LineItemRequest {
                    account_code: "2001".to_string(),
                    amount: 1000.0,
                    debit_credit: "C".to_string(),
                    cost_center: None,
                },
            ],
        };

        assert!(!request.company_code.is_empty());
        assert!(request.fiscal_year > 0);
        assert_eq!(request.line_items.len(), 2);
    }

    #[test]
    fn test_post_journal_entry_request() {
        let request = PostJournalEntryApiRequest {
            company_code: "1000".to_string(),
            fiscal_year: 2024,
            document_number: "JE-001".to_string(),
            posting_date: Some("2024-01-15".to_string()),
        };

        assert_eq!(request.document_number, "JE-001");
    }

    #[test]
    fn test_reverse_journal_entry_request() {
        let request = ReverseJournalEntryApiRequest {
            company_code: "1000".to_string(),
            fiscal_year: 2024,
            original_document_number: "JE-001".to_string(),
            reversal_date: "2024-01-20".to_string(),
            reversal_reason: "Error correction".to_string(),
            reference_document: None,
        };

        assert_eq!(request.original_document_number, "JE-001");
        assert!(!request.reversal_reason.is_empty());
    }

    #[test]
    fn test_journal_entry_response() {
        let response = JournalEntryApiResponse {
            document_number: "JE-001".to_string(),
            status: "DRAFT".to_string(),
            posting_date: "2024-01-15".to_string(),
            total_debit: 1000.0,
            total_credit: 1000.0,
            line_items: vec![],
        };

        assert_eq!(response.document_number, "JE-001");
        assert_eq!(response.total_debit, response.total_credit);
    }
}

// =============================================================================
// REST API Contract Tests
// =============================================================================

mod rest_api_contract_tests {
    use super::*;

    const BASE_URL: &str = "/api/v1";

    #[test]
    fn test_rest_endpoint_paths() {
        // Test that REST endpoints are correctly defined
        let endpoints = vec![
            ("POST", format!("{}/journal-entries", BASE_URL)),
            ("GET", format!("{}/journal-entries", BASE_URL)),
            ("GET", format!("{}/journal-entries/{{id}}", BASE_URL)),
            ("POST", format!("{}/journal-entries/{{id}}/post", BASE_URL)),
            ("POST", format!("{}/journal-entries/{{id}}/reverse", BASE_URL)),
            ("GET", format!("{}/account-balances", BASE_URL)),
            ("GET", format!("{}/trial-balance", BASE_URL)),
        ];

        for (method, path) in &endpoints {
            assert!(!path.is_empty());
            assert!(path.starts_with("/api/v1/") || path.starts_with("/api/v1"));
        }
    }

    #[test]
    fn test_request_query_parameters() {
        let params = ListJournalEntriesParams {
            company_code: Some("1000".to_string()),
            fiscal_year: Some(2024),
            status: Some("POSTED".to_string()),
            page_size: 50,
            page_token: None,
            sort_by: Some("posting_date".to_string()),
            sort_order: Some("desc".to_string()),
        };

        assert_eq!(params.page_size, 50);
        assert_eq!(params.sort_by, Some("posting_date".to_string()));
    }

    #[test]
    fn test_paged_result_structure() {
        let result: PagedResult<JournalEntrySummary> = PagedResult {
            items: vec![],
            next_page_token: None,
            total_count: 0,
        };

        assert!(result.items.is_empty());
        assert!(result.next_page_token.is_none() || result.next_page_token.is_some());
    }
}

// =============================================================================
// Error Code Mapping Tests
// =============================================================================

mod error_code_mapping_tests {
    use super::*;

    #[test]
    fn test_validation_error_mapping() {
        let error = ApiError::validation_failed("Company code is required");
        assert_eq!(error.code, ErrorCode::ValidationFailed);
        assert!(error.message.contains("Company code"));
    }

    #[test]
    fn test_not_found_error_mapping() {
        let error = ApiError::not_found("JournalEntry", "JE-001");
        assert_eq!(error.code, ErrorCode::NotFound);
    }

    #[test]
    fn test_conflict_error_mapping() {
        let error = ApiError::conflict("Document already exists", "JE-001");
        assert_eq!(error.code, ErrorCode::AlreadyExists);
    }

    #[test]
    fn test_business_rule_error_mapping() {
        let error = ApiError::business_rule_violation(
            "FISCAL_PERIOD_CLOSED",
            "Cannot post to closed period",
        );
        assert_eq!(error.code, ErrorCode::BusinessRuleViolation);
    }

    #[test]
    fn test_permission_denied_error_mapping() {
        let error = ApiError::permission_denied("finance:post");
        assert_eq!(error.code, ErrorCode::PermissionDenied);
    }

    #[test]
    fn test_grpc_status_code_mapping() {
        // Test that API errors map to correct gRPC status codes
        let error_cases = vec![
            (ErrorCode::ValidationFailed, "INVALID_ARGUMENT"),
            (ErrorCode::NotFound, "NOT_FOUND"),
            (ErrorCode::AlreadyExists, "ALREADY_EXISTS"),
            (ErrorCode::BusinessRuleViolation, "FAILED_PRECONDITION"),
            (ErrorCode::Conflict, "ABORTED"),
            (ErrorCode::PermissionDenied, "PERMISSION_DENIED"),
            (ErrorCode::ResourceExhausted, "RESOURCE_EXHAUSTED"),
            (ErrorCode::Internal, "INTERNAL"),
            (ErrorCode::Unavailable, "UNAVAILABLE"),
        ];

        for (error_code, expected_status) in error_cases {
            assert!(!expected_status.is_empty());
        }
    }

    #[test]
    fn test_error_response_format() {
        let error = ApiError::validation_failed("Invalid amount");
        let response = error.to_json_response();

        assert!(response.contains("code"));
        assert!(response.contains("message"));
        assert!(response.contains("trace_id"));
        assert!(response.contains("timestamp"));
    }
}

// =============================================================================
// Authentication Tests
// =============================================================================

mod authentication_tests {
    use super::*;

    #[test]
    fn test_auth_context_creation() {
        let context = AuthContext::new(
            "550e8400-e29b-41d4-a716-446655440001".to_string(),
            "550e8400-e29b-41d4-a716-446655440000".to_string(),
            vec!["finance:post".to_string(), "finance:read".to_string()],
        );

        assert_eq!(context.user_id, "550e8400-e29b-41d4-a716-446655440001");
        assert_eq!(context.tenant_id, "550e8400-e29b-41d4-a716-446655440000");
        assert_eq!(context.roles.len(), 2);
    }

    #[test]
    fn test_auth_interceptor_jwt_validation() {
        // Test JWT validation logic
        let claims = JwtClaims {
            sub: "550e8400-e29b-41d4-a716-446655440001".to_string(),
            tenant_id: "550e8400-e29b-41d4-a716-446655440000".to_string(),
            roles: vec!["finance:post".to_string()],
            exp: 1704067200,
            iss: "killer-erp".to_string(),
            aud: "financial-service".to_string(),
        };

        assert!(!claims.sub.is_empty());
        assert!(!claims.tenant_id.is_empty());
        assert!(claims.roles.contains(&"finance:post".to_string()));
    }

    #[test]
    fn test_role_based_access_control() {
        let admin_context = AuthContext::new(
            "user-1".to_string(),
            "tenant-1".to_string(),
            vec!["finance:admin".to_string()],
        );

        let user_context = AuthContext::new(
            "user-2".to_string(),
            "tenant-1".to_string(),
            vec!["finance:read".to_string()],
        );

        // Admin has all permissions
        assert!(admin_context.has_role("finance:post"));
        assert!(admin_context.has_role("finance:read"));
        assert!(admin_context.has_role("finance:reverse"));

        // User has only read permission
        assert!(!user_context.has_role("finance:post"));
        assert!(user_context.has_role("finance:read"));
    }

    #[test]
    fn test_idempotency_key_validation() {
        let key = "550e8400-e29b-41d4-a716-446655440000-550e8400-e29b-41d4-a716-446655440001-create-12345678";

        // Validate key format: tenant-user-operation-resource
        let parts: Vec<&str> = key.split('-').collect();
        assert!(parts.len() >= 4);

        assert_eq!(parts[0], "550e8400-e29b-41d4-a716-446655440000"); // tenant_id
        assert_eq!(parts[1], "550e8400-e29b-41d4-a716-446655440001"); // user_id
        assert_eq!(parts[2], "create"); // operation
    }
}

// =============================================================================
// API Versioning Tests
// =============================================================================

mod api_versioning_tests {
    #[test]
    fn test_version_header_format() {
        let version = "v1";
        assert_eq!(version, "v1");
    }

    #[test]
    fn test_accept_header_versioning() {
        let accept_header = "application/json; version=v1";
        assert!(accept_header.contains("version=v1"));
    }

    #[test]
    fn test_content_type_with_version() {
        let content_type = "application/json; charset=utf-8; version=v1";
        assert!(content_type.contains("application/json"));
        assert!(content_type.contains("version=v1"));
    }
}

// =============================================================================
// OpenAPI Documentation Tests
// =============================================================================

mod openapi_tests {
    use super::*;

    #[test]
    fn test_schema_definitions() {
        // Verify OpenAPI schema is properly defined
        let schemas = vec![
            "CreateJournalEntryRequest",
            "JournalEntryResponse",
            "PostJournalEntryRequest",
            "ReverseJournalEntryRequest",
            "ListJournalEntriesRequest",
            "AccountBalance",
            "TrialBalance",
        ];

        for schema in &schemas {
            assert!(!schema.is_empty());
        }
    }

    #[test]
    fn test_example_request() {
        let example = serde_json::json!({
            "company_code": "1000",
            "fiscal_year": 2024,
            "posting_date": "2024-01-15",
            "document_date": "2024-01-15",
            "currency_code": "CNY",
            "header_text": "Test Entry",
            "line_items": [
                {"account_code": "1001", "amount": 1000, "debit_credit": "D", "cost_center": "CC001"},
                {"account_code": "2001", "amount": 1000, "debit_credit": "C"}
            ]
        });

        assert_eq!(example["company_code"], "1000");
        assert_eq!(example["fiscal_year"], 2024);
        assert!(example["line_items"].is_array());
        assert_eq!(example["line_items"].as_array().unwrap().len(), 2);
    }

    #[test]
    fn test_example_response() {
        let example = serde_json::json!({
            "document_number": "JE-001",
            "status": "DRAFT",
            "posting_date": "2024-01-15",
            "total_debit": 1000.0,
            "total_credit": 1000.0
        });

        assert_eq!(example["status"], "DRAFT");
        assert_eq!(example["total_debit"], example["total_credit"]);
    }
}

// =============================================================================
// Health Check Tests
// =============================================================================

mod health_check_tests {
    #[test]
    fn test_liveness_probe() {
        let probe = HealthProbe {
            status: "UP".to_string(),
            timestamp: chrono::Utc::now().to_rfc3339(),
        };

        assert_eq!(probe.status, "UP");
    }

    #[test]
    fn test_readiness_probe() {
        let probe = ReadinessProbe {
            status: "UP".to_string(),
            checks: vec![
                HealthCheck { name: "database", status: "UP" },
                HealthCheck { name: "kafka", status: "UP" },
                HealthCheck { name: "cache", status: "UP" },
            ],
        };

        assert_eq!(probe.status, "UP");
        assert_eq!(probe.checks.len(), 3);
        assert!(probe.checks.iter().all(|c| c.status == "UP"));
    }
}

// =============================================================================
// Supporting Types
// =============================================================================

#[derive(Debug, Clone, Serialize, Deserialize)]
struct CreateJournalEntryApiRequest {
    company_code: String,
    fiscal_year: i32,
    posting_date: String,
    document_date: String,
    currency_code: String,
    header_text: Option<String>,
    line_items: Vec<LineItemRequest>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct LineItemRequest {
    account_code: String,
    amount: f64,
    debit_credit: String,
    cost_center: Option<String>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct PostJournalEntryApiRequest {
    company_code: String,
    fiscal_year: i32,
    document_number: String,
    posting_date: Option<String>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct ReverseJournalEntryApiRequest {
    company_code: String,
    fiscal_year: i32,
    original_document_number: String,
    reversal_date: String,
    reversal_reason: String,
    reference_document: Option<String>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct JournalEntryApiResponse {
    document_number: String,
    status: String,
    posting_date: String,
    total_debit: f64,
    total_credit: f64,
    line_items: Vec<serde_json::Value>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct ListJournalEntriesParams {
    company_code: Option<String>,
    fiscal_year: Option<i32>,
    status: Option<String>,
    page_size: usize,
    page_token: Option<String>,
    sort_by: Option<String>,
    sort_order: Option<String>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct PagedResult<T> {
    items: Vec<T>,
    next_page_token: Option<String>,
    total_count: usize,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct JournalEntrySummary {
    document_number: String,
    posting_date: String,
    status: String,
    total_amount: f64,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
struct JwtClaims {
    sub: String,
    tenant_id: String,
    roles: Vec<String>,
    exp: i64,
    iss: String,
    aud: String,
}

#[derive(Debug, Clone)]
struct AuthContext {
    pub user_id: String,
    pub tenant_id: String,
    pub roles: Vec<String>,
}

impl AuthContext {
    fn new(user_id: String, tenant_id: String, roles: Vec<String>) -> Self {
        Self {
            user_id,
            tenant_id,
            roles,
        }
    }

    fn has_role(&self, role: &str) -> bool {
        self.roles.contains(&role.to_string())
    }
}

struct HealthProbe {
    status: String,
    timestamp: String,
}

struct ReadinessProbe {
    status: String,
    checks: Vec<HealthCheck>,
}

struct HealthCheck {
    name: String,
    status: String,
}
